expanded.rs

extern "C" {
    pub fn janet_fixarity(arity: i32, fix: i32);
}
extern "C" {
    pub fn janet_getmethod(
        method: JanetKeyword,
        methods: *const JanetMethod,
        out: *mut Janet,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_nextmethod(methods: *const JanetMethod, key: Janet) -> Janet;
}
extern "C" {
    pub fn janet_getnumber(argv: *const Janet, n: i32) -> f64;
}
extern "C" {
    pub fn janet_getarray(argv: *const Janet, n: i32) -> *mut JanetArray;
}
extern "C" {
    pub fn janet_gettuple(argv: *const Janet, n: i32) -> JanetTuple;
}
extern "C" {
    pub fn janet_gettable(argv: *const Janet, n: i32) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_getstruct(argv: *const Janet, n: i32) -> JanetStruct;
}
extern "C" {
    pub fn janet_getstring(argv: *const Janet, n: i32) -> JanetString;
}
extern "C" {
    pub fn janet_getcstring(argv: *const Janet, n: i32) -> *const ::libc::c_char;
}
extern "C" {
    pub fn janet_getsymbol(argv: *const Janet, n: i32) -> JanetSymbol;
}
extern "C" {
    pub fn janet_getkeyword(argv: *const Janet, n: i32) -> JanetKeyword;
}
extern "C" {
    pub fn janet_getbuffer(argv: *const Janet, n: i32) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_getfiber(argv: *const Janet, n: i32) -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_getfunction(argv: *const Janet, n: i32) -> *mut JanetFunction;
}
extern "C" {
    pub fn janet_getcfunction(argv: *const Janet, n: i32) -> JanetCFunction;
}
extern "C" {
    pub fn janet_getboolean(argv: *const Janet, n: i32) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_getpointer(argv: *const Janet, n: i32) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_getnat(argv: *const Janet, n: i32) -> i32;
}
extern "C" {
    pub fn janet_getinteger(argv: *const Janet, n: i32) -> i32;
}
extern "C" {
    pub fn janet_getinteger64(argv: *const Janet, n: i32) -> i64;
}
extern "C" {
    pub fn janet_getuinteger64(argv: *const Janet, n: i32) -> u64;
}
extern "C" {
    pub fn janet_getsize(argv: *const Janet, n: i32) -> usize;
}
extern "C" {
    pub fn janet_getindexed(argv: *const Janet, n: i32) -> JanetView;
}
extern "C" {
    pub fn janet_getbytes(argv: *const Janet, n: i32) -> JanetByteView;
}
extern "C" {
    pub fn janet_getdictionary(argv: *const Janet, n: i32) -> JanetDictView;
}
extern "C" {
    pub fn janet_getabstract(
        argv: *const Janet,
        n: i32,
        at: *const JanetAbstractType,
    ) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_getslice(argc: i32, argv: *const Janet) -> JanetRange;
}
extern "C" {
    pub fn janet_gethalfrange(
        argv: *const Janet,
        n: i32,
        length: i32,
        which: *const ::libc::c_char,
    ) -> i32;
}
extern "C" {
    pub fn janet_getargindex(
        argv: *const Janet,
        n: i32,
        length: i32,
        which: *const ::libc::c_char,
    ) -> i32;
}
extern "C" {
    pub fn janet_getflags(
        argv: *const Janet,
        n: i32,
        flags: *const ::libc::c_char,
    ) -> u64;
}
extern "C" {
    pub fn janet_optnumber(argv: *const Janet, argc: i32, n: i32, dflt: f64) -> f64;
}
extern "C" {
    pub fn janet_opttuple(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetTuple,
    ) -> JanetTuple;
}
extern "C" {
    pub fn janet_optstruct(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetStruct,
    ) -> JanetStruct;
}
extern "C" {
    pub fn janet_optstring(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetString,
    ) -> JanetString;
}
extern "C" {
    pub fn janet_optcstring(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *const ::libc::c_char,
    ) -> *const ::libc::c_char;
}
extern "C" {
    pub fn janet_optsymbol(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetString,
    ) -> JanetSymbol;
}
extern "C" {
    pub fn janet_optkeyword(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetString,
    ) -> JanetKeyword;
}
extern "C" {
    pub fn janet_optfiber(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut JanetFiber,
    ) -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_optfunction(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut JanetFunction,
    ) -> *mut JanetFunction;
}
extern "C" {
    pub fn janet_optcfunction(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: JanetCFunction,
    ) -> JanetCFunction;
}
extern "C" {
    pub fn janet_optboolean(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: ::libc::c_int,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_optpointer(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut ::libc::c_void,
    ) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_optnat(argv: *const Janet, argc: i32, n: i32, dflt: i32) -> i32;
}
extern "C" {
    pub fn janet_optinteger(argv: *const Janet, argc: i32, n: i32, dflt: i32) -> i32;
}
extern "C" {
    pub fn janet_optinteger64(argv: *const Janet, argc: i32, n: i32, dflt: i64) -> i64;
}
extern "C" {
    pub fn janet_optsize(argv: *const Janet, argc: i32, n: i32, dflt: usize) -> usize;
}
extern "C" {
    pub fn janet_optabstract(
        argv: *const Janet,
        argc: i32,
        n: i32,
        at: *const JanetAbstractType,
        dflt: JanetAbstract,
    ) -> JanetAbstract;
}
extern "C" {
    pub fn janet_optbuffer(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt_len: i32,
    ) -> *mut JanetBuffer;
}
extern "C" {
    pub fn janet_opttable(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt_len: i32,
    ) -> *mut JanetTable;
}
extern "C" {
    pub fn janet_optarray(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt_len: i32,
    ) -> *mut JanetArray;
}
extern "C" {
    pub fn janet_dyn(name: *const ::libc::c_char) -> Janet;
}
extern "C" {
    pub fn janet_setdyn(name: *const ::libc::c_char, value: Janet);
}
extern "C" {
    pub static janet_file_type: JanetAbstractType;
}
extern "C" {
    pub fn janet_makefile(f: *mut FILE, flags: i32) -> Janet;
}
extern "C" {
    pub fn janet_makejfile(f: *mut FILE, flags: i32) -> *mut JanetFile;
}
extern "C" {
    pub fn janet_getfile(argv: *const Janet, n: i32, flags: *mut i32) -> *mut FILE;
}
extern "C" {
    pub fn janet_dynfile(name: *const ::libc::c_char, def: *mut FILE) -> *mut FILE;
}
extern "C" {
    pub fn janet_getjfile(argv: *const Janet, n: i32) -> *mut JanetFile;
}
extern "C" {
    pub fn janet_checkfile(j: Janet) -> JanetAbstract;
}
extern "C" {
    pub fn janet_unwrapfile(j: Janet, flags: *mut i32) -> *mut FILE;
}
extern "C" {
    pub fn janet_file_close(file: *mut JanetFile) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_cryptorand(out: *mut u8, n: usize) -> ::libc::c_int;
}
extern "C" {
    pub fn janet_marshal_size(ctx: *mut JanetMarshalContext, value: usize);
}
extern "C" {
    pub fn janet_marshal_int(ctx: *mut JanetMarshalContext, value: i32);
}
extern "C" {
    pub fn janet_marshal_int64(ctx: *mut JanetMarshalContext, value: i64);
}
extern "C" {
    pub fn janet_marshal_byte(ctx: *mut JanetMarshalContext, value: u8);
}
extern "C" {
    pub fn janet_marshal_bytes(
        ctx: *mut JanetMarshalContext,
        bytes: *const u8,
        len: usize,
    );
}
extern "C" {
    pub fn janet_marshal_janet(ctx: *mut JanetMarshalContext, x: Janet);
}
extern "C" {
    pub fn janet_marshal_abstract(
        ctx: *mut JanetMarshalContext,
        abstract_: JanetAbstract,
    );
}
extern "C" {
    pub fn janet_unmarshal_ensure(ctx: *mut JanetMarshalContext, size: usize);
}
extern "C" {
    pub fn janet_unmarshal_size(ctx: *mut JanetMarshalContext) -> usize;
}
extern "C" {
    pub fn janet_unmarshal_int(ctx: *mut JanetMarshalContext) -> i32;
}
extern "C" {
    pub fn janet_unmarshal_int64(ctx: *mut JanetMarshalContext) -> i64;
}
extern "C" {
    pub fn janet_unmarshal_byte(ctx: *mut JanetMarshalContext) -> u8;
}
extern "C" {
    pub fn janet_unmarshal_bytes(
        ctx: *mut JanetMarshalContext,
        dest: *mut u8,
        len: usize,
    );
}
extern "C" {
    pub fn janet_unmarshal_janet(ctx: *mut JanetMarshalContext) -> Janet;
}
extern "C" {
    pub fn janet_unmarshal_abstract(
        ctx: *mut JanetMarshalContext,
        size: usize,
    ) -> JanetAbstract;
}
extern "C" {
    pub fn janet_unmarshal_abstract_reuse(
        ctx: *mut JanetMarshalContext,
        p: *mut ::libc::c_void,
    );
}
extern "C" {
    pub fn janet_register_abstract_type(at: *const JanetAbstractType);
}
extern "C" {
    pub fn janet_get_abstract_type(key: Janet) -> *const JanetAbstractType;
}
extern "C" {
    pub static janet_peg_type: JanetAbstractType;
}
pub const JanetPegOpcod_RULE_LITERAL: JanetPegOpcod = 0;
pub const JanetPegOpcod_RULE_NCHAR: JanetPegOpcod = 1;
pub const JanetPegOpcod_RULE_NOTNCHAR: JanetPegOpcod = 2;
pub const JanetPegOpcod_RULE_RANGE: JanetPegOpcod = 3;
pub const JanetPegOpcod_RULE_SET: JanetPegOpcod = 4;
pub const JanetPegOpcod_RULE_LOOK: JanetPegOpcod = 5;
pub const JanetPegOpcod_RULE_CHOICE: JanetPegOpcod = 6;
pub const JanetPegOpcod_RULE_SEQUENCE: JanetPegOpcod = 7;
pub const JanetPegOpcod_RULE_IF: JanetPegOpcod = 8;
pub const JanetPegOpcod_RULE_IFNOT: JanetPegOpcod = 9;
pub const JanetPegOpcod_RULE_NOT: JanetPegOpcod = 10;
pub const JanetPegOpcod_RULE_BETWEEN: JanetPegOpcod = 11;
pub const JanetPegOpcod_RULE_GETTAG: JanetPegOpcod = 12;
pub const JanetPegOpcod_RULE_CAPTURE: JanetPegOpcod = 13;
pub const JanetPegOpcod_RULE_POSITION: JanetPegOpcod = 14;
pub const JanetPegOpcod_RULE_ARGUMENT: JanetPegOpcod = 15;
pub const JanetPegOpcod_RULE_CONSTANT: JanetPegOpcod = 16;
pub const JanetPegOpcod_RULE_ACCUMULATE: JanetPegOpcod = 17;
pub const JanetPegOpcod_RULE_GROUP: JanetPegOpcod = 18;
pub const JanetPegOpcod_RULE_REPLACE: JanetPegOpcod = 19;
pub const JanetPegOpcod_RULE_MATCHTIME: JanetPegOpcod = 20;
pub const JanetPegOpcod_RULE_ERROR: JanetPegOpcod = 21;
pub const JanetPegOpcod_RULE_DROP: JanetPegOpcod = 22;
pub const JanetPegOpcod_RULE_BACKMATCH: JanetPegOpcod = 23;
pub const JanetPegOpcod_RULE_TO: JanetPegOpcod = 24;
pub const JanetPegOpcod_RULE_THRU: JanetPegOpcod = 25;
pub const JanetPegOpcod_RULE_LENPREFIX: JanetPegOpcod = 26;
pub const JanetPegOpcod_RULE_READINT: JanetPegOpcod = 27;
pub const JanetPegOpcod_RULE_LINE: JanetPegOpcod = 28;
pub const JanetPegOpcod_RULE_COLUMN: JanetPegOpcod = 29;
pub const JanetPegOpcod_RULE_UNREF: JanetPegOpcod = 30;
pub const JanetPegOpcod_RULE_CAPTURE_NUM: JanetPegOpcod = 31;
pub type JanetPegOpcod = ::libc::c_uint;
#[repr(C)]
pub struct JanetPeg {
    pub bytecode: *mut u32,
    pub constants: *mut Janet,
    pub bytecode_len: usize,
    pub num_constants: u32,
    pub has_backref: ::libc::c_int,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetPeg {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetPeg",
            "bytecode",
            &&self.bytecode,
            "constants",
            &&self.constants,
            "bytecode_len",
            &&self.bytecode_len,
            "num_constants",
            &&self.num_constants,
            "has_backref",
            &&self.has_backref,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetPeg {}
#[automatically_derived]
impl ::core::clone::Clone for JanetPeg {
    #[inline]
    fn clone(&self) -> JanetPeg {
        let _: ::core::clone::AssertParamIsClone<*mut u32>;
        let _: ::core::clone::AssertParamIsClone<*mut Janet>;
        let _: ::core::clone::AssertParamIsClone<usize>;
        let _: ::core::clone::AssertParamIsClone<u32>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        *self
    }
}
